chore: update base image in ONNX Dockerfile and add persistent container entrypoint